plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.node-gradle.node' version '3.3.0'
}

node {
    version = '18.16.0'
    npmVersion = '9.5.1'
    download = true
    workDir = file("${project.layout.buildDirectory}/nodejs")
    npmWorkDir = file("${project.layout.buildDirectory}/npm")
}

group = 'com.andrena'
version = '0.0.1-SNAPSHOT'


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'com.h2database:h2'
    implementation 'com.thoughtworks.xstream:xstream:1.4.6'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

node {
    version = '18.16.0'
    npmVersion = '9.5.1'
    download = true
    nodeProjectDir = file("${project.projectDir}/frontend")
}

task buildFrontend(type: NpmTask) {
    dependsOn npmInstall
    args = ['run', 'build']
    workingDir = file('frontend')
}

tasks.named('processResources') {
    dependsOn buildFrontend
    from('frontend/dist') {
        into('static')
    }

}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootRun') {
    jvmArgs = [
            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens', 'java.base/java.text=ALL-UNNAMED',
            '--add-opens', 'java.desktop/java.awt.font=ALL-UNNAMED',
            '--add-opens', 'java.desktop/java.beans=ALL-UNNAMED',
            '-Xmx512m'
    ]
}
